osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_regex_match/test_rejects_invalid_regex.txt
error: invalid regex pattern
--> main.sml:1:25
     |
   1 | Foo = RegexMatch(pattern="(", target="")
     |                          ^ error: missing ), unterminated subpattern at position 0
